<resources>
    <string name="app_name">ProyectoBus</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>

    <!-- ESTO AGREGUÉ. -->

    <string name="total_price">Precio total</string>
    <string name="seating">Asientos</string>
    <string name="option_1_chair">1er piso (180º)</string>
    <string name="option_2_chair">2do piso (160º)</string>
    <string name="number">N00</string>
    <string name="services1">Servicios</string>
    <string name="button_next">CONTINUAR</string>
    <string name="text_select_chair_going">Elige tus asientos de ida</string>
    <string name="photos">Fotos</string>
    <string name="text_from">Desde</string>
    <string name="your_location">Tu ubicación</string>
    <string name="text_to">Hasta</string>
    <string name="your_destiny">Tu destino</string>
    <string name="text_departure">Ida</string>
    <string name="today">Hoy</string>
    <string name="text_return">Vuelta</string>
    <string name="select_a_date">Elige una fecha</string>
    <string name="one_way">Solo ida</string>
    <string name="search_buses">BUSCAR BUSES</string>
    <string name="signature_declarationJ">Firma tu Declaración de Viaje</string>
    <string name="travel_title">Elige tu próxima aventura</string>
    <string name="filters">Filtros</string>
    <string name="night">Noche</string>
    <string name="afternoon">Tarde</string>
    <string name="tomorrow">Mañana</string>
    <string name="text_tittle_destiny">Conoce tu próxima aventura</string>
    <string name="from_text">Desde</string>
    <string name="text_bus_bed">Bus cama 160º</string>
    <string name="purchase_message">Tu compra se realizó\10 con éxito</string>
    <string name="show_qr_enter_bus">Mostrando el código QR, los\10 pasajeros podrán ingresar al bus</string>
    <string name="send_electronic_ticket_email">Se te envió a tu correo tu ticket electrónico\10con el resúmen de la compra</string>
    <string name="show_ticket_button">MOSTRAR RESÚMEN</string>
    <string name="return1">VOLVER</string>
    <string name="button_next_buy">PROCEDER CON LA COMPRA</string>
    <string name="button_pay">PAGAR</string>
    <string name="passenger">Pasajero 1</string>
    <string name="document_type">Tipo doc</string>
    <string name="document_number">Nº Documento</string>
    <string name="characteres_available">0123456789*,QWERTYUIOPASDFGHJKLZXCVBNM qwertzuiopasdfghjklyxcvbnm_-#</string>
    <string name="names">Nombres</string>
    <string name="last_name">Apellido paterno</string>
    <string name="mother_last_name">Apellido materno</string>
    <string name="country">País</string>
    <string name="email">Correo</string>
    <string name="characteres_email_available">0123456789QWERTYUIOPASDFGHJKLZXCVBNM qwertzuiopasdfghjklyxcvbnm_-@.%*$</string>
    <string name="phone">Teléfono</string>
    <string name="date_na">Fecha de nacimiento</string>
    <string name="date_ge">Genero</string>
    <string name="exit">Salida:</string>
    <string name="exit_number">A7, A33</string>
    <string name="payment_methods_title">Formas de pago</string>
    <string name="invoice">¿Factura?</string>
    <string name="business_name">Razón social</string>
    <string name="ruc">Ruc</string>
    <string name="accept_terms_conditions2">Acepto los términos y condiciones</string>
    <string name="want_subscribe">Deseo suscribirme al boletín y recibir promociones</string>
    <string name="surnames">Apellidos</string>
    <string name="yape_title1">Crear Cuenta</string>
    <string name="yape_title2">Agregar tarjeta</string>
    <string name="yape_title3">Con esta tarjeta haras tus transferencias.</string>
    <string name="esp">ESP</string>
    <string name="eng">ENG</string>

    <string name="dialog_message_negative">Cancel</string>
    <string name="cancel">Cancelar</string>
    <string name="titulo_temp">[ TU TÍTULO AQUÍ ]</string>
    <string name="logo">Logo</string>
    <string name="visanet_hint_card">Número de Tarjeta</string>
    <string name="fintrax_content2">Tipo de cambio de acuerdo a la entidad bancaria.</string>
    <string name="visanet_label_payment_method">Elige un medio de pago :</string>
    <string name="pe_tarjeta_cd">Tarjeta de crédito y débito</string>
    <string name="pe_transferencia">Trasferencias Bancarias y \10depósitos en efectivo</string>
    <string name="btnFechaIR">Fecha de Ida y retorno</string>


    <string-array name="documento">
        <item>DNI</item>
        <item>RUC</item>
        <item>CARNET DE EXTRANJERIA</item>
        <item>PASAPORTE</item>
    </string-array>

    <string-array name="pais">
        <item>Peru</item>
        <item>Mexico</item>
        <item>Bolivia</item>
        <item>Venezuela</item>
    </string-array>

    <string-array name="genero">
        <item>Masculino</item>
        <item>Femenino</item>
        <item>Otro</item>
    </string-array>
</resources>

