<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin_image"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:src="@drawable/ticket_icon" />

    <TextView
        android:textSize="@dimen/text_size_title"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/purchase_message"
        android:fontFamily="@font/montserrat_bold" />

    <TextView
        android:textSize="@dimen/text_size_subtitle"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/show_qr_enter_bus"
        android:fontFamily="@font/montserrat_regular" />

    <ImageView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:src="@drawable/qr_example" />

    <TextView
        android:textSize="@dimen/text_size_subtitle"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/send_electronic_ticket_email"
        android:fontFamily="@font/montserrat_light" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnShow"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_button"
                android:background="@drawable/background_botton_enable"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />
        </FrameLayout>

        <TextView
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_ticket_button"
            android:fontFamily="@font/montserrat_regular" />

        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:src="@drawable/visibility_on"
            app:tint="@android:color/white" />
    </FrameLayout>

    <Button
        android:textSize="@dimen/text_size_button"
        android:textStyle="bold"
        android:textColor="@color/fuscia"
        android:id="@+id/btnBack"
        android:background="@drawable/background_botton_enable_border"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/return1"
        android:fontFamily="@font/montserrat_bold" />
</LinearLayout>
