<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomBar"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_menu_bar"
    android:background="@android:color/white"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:visibility="visible"
    android:weightSum="4">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/morning"
                app:tint="@color/plomo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:text="@string/tomorrow"
                android:textColor="@color/text_opacity"
                android:textSize="@dimen/text_size_caption" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/afternoon"
                app:tint="@color/plomo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:text="@string/afternoon"
                android:textColor="@color/text_opacity"
                android:textSize="@dimen/text_size_caption" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/night"
                app:tint="@color/plomo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:text="@string/night"
                android:textColor="@color/text_opacity"
                android:textSize="@dimen/text_size_caption" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/filters"
                app:tint="@color/plomo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:text="@string/filters"
                android:textColor="@color/text_opacity"
                android:textSize="@dimen/text_size_caption" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
